# bernard_hw_if

./: CMakeLists.txt  LICENSE  README.md  buildPackage.bash  package.xml
.github/workflows/: build-arm64-node.yml  ros2-package-test.yml  ros2-package.yml
include/: actuators_node.hpp  config.hpp  drivers.hpp  types.hpp  utils.hpp
src/: actuator_if.cpp  actuators_node.cpp  bernard_actuators_if.cpp  joint_state_publisher.cpp  utils.cpp
tests/: test_actuators_node.cpp
tests/mockups/: MockDriver.hpp  MockResponder.cpp  MockResponder.hpp  mock_driver.cpp  mock_driver.hpp  mock_responder.cpp
tests/utils/: gtest_vector_utils.hpp  test_nodes.cpp  test_nodes.hpp
